legacywebshop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-kompose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: legacywebshop
  name: legacywebshop
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: legacywebshop
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-kompose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/local_dev_net: "true"
        io.kompose.service: legacywebshop
    spec:
      containers:
        - image: timharms/hska-vis-legacy-legacywebshop
          name: legacywebshop
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
