productservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-kompose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: productservice
  name: productservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: productservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-kompose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/local_dev_net: "true"
        io.kompose.service: productservice
    spec:
      containers:
        - image: timharms/hska-vis-legacy-productservice
          name: productservice
          ports:
            - containerPort: 8082
          resources: {}
      restartPolicy: Always
status: {}
