web-shop-db-image-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-kompose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: web-shop-db-image
  name: web-shop-db-image
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-shop-db-image
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-kompose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/local_dev_net: "true"
        io.kompose.service: web-shop-db-image
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: webshop
            - name: MYSQL_PASSWORD
              value: 240b2c6d58ff2ce2f508b49f
            - name: MYSQL_ROOT_PASSWORD
              value: c8de110f37300a53a971749
            - name: MYSQL_USER
              value: webshopuser
          image: timharms/hska-vis-legacy-web-shop-db-image
          name: web-shop-db-image
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: web-shop-db-image-claim0
      restartPolicy: Always
      volumes:
        - name: web-shop-db-image-claim0
          persistentVolumeClaim:
            claimName: web-shop-db-image-claim0
status: {}
