legacywebshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-kompose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: legacywebshop
  name: legacywebshop
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8080
  selector:
    io.kompose.service: legacywebshop
status:
  loadBalancer: {}
